hermes/vendor/ui_test/examples_tests/rustc_basic/filtered_out.rs
//@[foo] only-target: asdfasdf

//@ revisions: foo bar

fn//~ ERROR: expected identifier
